# Survivio

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  TODO.txt  dev-build.sh  main.cpp  makefile  public.pgp  start.sh
.github/workflows/: cmake.yml
include/: Global.hpp  Map.hpp  OS-specific.hpp  Player.hpp  SuperPlayer.hpp
res/Creator-Kit/: hex_ground.txt  hex_outfit.txt
res/Creator-Kit/player/: player_kit.psd
res/graphics/wallpaper/: surviv_logo_full.psd
src/: Map.cpp  OS-specific.hpp  Player.cpp  Player.hpp  SuperPlayer.cpp  main.cpp  makefile
