#add --verbose flag for detailed status log
#add -DCMAKE_BUILD_TYPE="Debug" for development builds
#add -G"Ninja" for ninja builds
#change CMAKE_BUILD_PARALLEL_LEVEL and MULTITHREADED_BUILD to match the number of your cores/threads



cmake_minimum_required (VERSION 3.18.2)

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(FATAL_ERROR "FATAL: In-source builds are not allowed. You should create a separate directory for build files.")
endif()

#set (CMAKE_C_COMPILER "clang") #or gcc
#set (CMAKE_CXX_COMPILER "clang++") #or g++

project (Survivio)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (CMAKE_BUILD_PARALLEL_LEVEL 8)
set (MULTITHREADED_BUILD 8)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

if (NOT CMAKE_BUILD_TYPE)
  set (CMAKE_BUILD_TYPE "Release")
  message (STATUS "Build type not specified: Use Release by default")
endif()

if (WIN32)
    set (SFML_INCLUDE_DIR "dependencies/SFML/windows/include")
    set (SFML_LIBRARY_DIR "dependencies/SFML/windows/lib")
endif()

if (APPLE)
    set (SFML_INCLUDE_DIR "dependencies/SFML/macOS/include")
    set (SFML_LIBRARY_DIR "dependencies/SFML/macOS/lib")
endif()

if (UNIX AND NOT APPLE) #LINUX
    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Weffc++")
    set (SFML_INCLUDE_DIR "dependencies/SFML/linux/include")
    set (SFML_LIBRARY_DIR "dependencies/SFML/linux/lib")
endif()

file (MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
file (MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/docs")
file (COPY "LICENSE.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/bin/docs")
file (COPY "CHANGELOG.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/bin/docs")
file (COPY "res" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/bin")
file (COPY "${SFML_LIBRARY_DIR}" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/bin")

include_directories ("include")
include_directories (SYSTEM ${SFML_INCLUDE_DIR})
file (GLOB SRC_FILES "src/*.cpp")

if (WIN32)
    file (GLOB LIB_FILES "${CMAKE_CURRENT_BINARY_DIR}/bin/lib/*")
else()
    link_directories ("${CMAKE_CURRENT_BINARY_DIR}/bin/lib/")
endif()

if (WIN32)
    add_executable (Survivio WIN32 ${SRC_FILES})
    target_link_libraries (Survivio ${LIB_FILES})
else()
    add_executable (Survivio ${SRC_FILES})
    set_target_properties (Survivio PROPERTIES LINK_FLAGS "-Wl,-rpath,./lib")
    target_link_libraries (Survivio sfml-graphics sfml-window sfml-audio sfml-network sfml-system)
endif()